pgrx-tests/tests/compile-fail/aggregate-functions-dont-run-forever.stderr
error: cannot find attribute `pg_aggregate` in this scope
  --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:38:3
   |
38 | #[pg_aggregate]
   |   ^^^^^^^^^^^^
   |
help: consider importing one of these items
   |
1  + use pgrx::pg_aggregate;
   |
1  + use pgrx_macros::pg_aggregate;
   |

error: cannot find attribute `pg_aggregate` in this scope
 --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:1:3
  |
1 | #[pg_aggregate]
  |   ^^^^^^^^^^^^
  |
help: consider importing one of these items
  |
1 + use pgrx::pg_aggregate;
  |
1 + use pgrx_macros::pg_aggregate;
  |

error[E0405]: cannot find trait `Aggregate` in this scope
 --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:2:6
  |
2 | impl Aggregate for SumScritches {
  |      ^^^^^^^^^ not found in this scope
  |
help: consider importing this trait
  |
1 + use pgrx::Aggregate;
  |

error[E0412]: cannot find type `SumScritches` in this scope
 --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:2:20
  |
2 | impl Aggregate for SumScritches {
  |                    ^^^^^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared crate or module `pg_sys`
  --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:10:18
   |
10 |         _fcinfo: pg_sys::FunctionCallInfo,
   |                  ^^^^^^ use of undeclared crate or module `pg_sys`
   |
help: consider importing one of these items
   |
1  + use pgrx::pg_sys;
   |
1  + use pgrx::prelude::pg_sys;
   |

error[E0405]: cannot find trait `Aggregate` in this scope
  --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:39:6
   |
39 | impl Aggregate for ScritchCollector {
   |      ^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
1  + use pgrx::Aggregate;
   |

error[E0433]: failed to resolve: use of undeclared crate or module `pg_sys`
  --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:46:18
   |
46 |         _fcinfo: pg_sys::FunctionCallInfo,
   |                  ^^^^^^ use of undeclared crate or module `pg_sys`
   |
help: consider importing one of these items
   |
1  + use pgrx::pg_sys;
   |
1  + use pgrx::prelude::pg_sys;
   |

error[E0433]: failed to resolve: use of undeclared type `PgHeapTuple`
  --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:50:21
   |
50 |             None => PgHeapTuple::new_composite_type(DOG_COMPOSITE_TYPE).unwrap(),
   |                     ^^^^^^^^^^^ use of undeclared type `PgHeapTuple`
   |
help: consider importing this struct
   |
1  + use pgrx::heap_tuple::PgHeapTuple;
   |

error[E0425]: cannot find value `DOG_COMPOSITE_TYPE` in this scope
  --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:50:53
   |
50 |             None => PgHeapTuple::new_composite_type(DOG_COMPOSITE_TYPE).unwrap(),
   |                                                     ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:56:2
   |
56 | }
   |  ^ consider adding a `main` function to `$DIR/tests/compile-fail/aggregate-functions-dont-run-forever.rs`
